TestSuite/errors/err0195.pas
uses System;

type 
[System.Console.WriteLine]
MyClassAttr = class
a : integer;
public fA : string;
public property Prop : integer read a write a;
end;


begin
  
end.